--- a/tq.java.concurrent/src/main/java/readme
+++ b/tq.java.concurrent/src/main/java/readme
@@ -2,4 +2,5 @@
 	1.只有任务都是同类型的并且相互独立时,线程池的性能才能达到最佳.如果将运行时间较长的任务和运行时间较短的任务
 	混合在一起,除非线程池很大,否则将可能造成阻塞.如果提交的任务依赖与其他任务,除非线程池无限大,否则可能造成死锁
 	---摘自 java并发编程实战
-	2.
+	2.带有时间监控的ThreadPoolExecutor-->TimingThreadPool,
+	3.
