--- a/tq.java.note/src/main/java/_mainshi/20180521.md
+++ b/tq.java.note/src/main/java/_mainshi/20180521.md
@@ -9,11 +9,12 @@
 2. TCP/IP 书本协议第一部分看完   HTTP 复习并深入
 3. Mysql 索引复习
 4. rabbitMQ基本的原理
-5. spring 复习, spring mvc 原理搞懂
-6. 负载均衡 器 熟悉几个
 7. Mybatis 复习并深入
-8. Linux..
+5. spring 复习, spring mvc 原理搞懂
 9. 算法(第四版).....
+6. 负载均衡 器 熟悉几个
+8. Linux..
+10. spring boot spring cloud
 
 
 ### 以后职业发展
