mysql 创建高性能的索引

--- a/tq.java.note/src/main/java/_mainshi/20180521.md
+++ b/tq.java.note/src/main/java/_mainshi/20180521.md
@@ -17,6 +17,11 @@
 10. spring boot / spring cloud
 11. Effective java
 
+### 这几天计划-2018-09-17
+1. mysql索引
+2. JVM 收集器 算法, 常用命令与参数
+3. 算法复习
+
 
 ### 以后职业发展
 1. hadoop, Hive, spark..
