--- a/tq.java.thrift/src/main/java/_question/_online/20180427.md
+++ b/tq.java.thrift/src/main/java/_question/_online/20180427.md
@@ -24,6 +24,14 @@
 2. arg.maxReadBufferBytes = 1024 * 1024;
 3. 只更新 1,3 节点
 
+### 问题原因
+1. `https://www.cnblogs.com/superfj/p/8474288.html`
+1. 当thrift服务端的信息不是thrift IDL定义的, 就无法正常序列化, 
+2. 序列化出来的数据会异常的大！大到超过1个G的都有。
+3. args.maxReadBufferBytes = 1*1024 * 1024L
+    - thrift会抛出错误日志，并直接没有读这个消息，返回false,不处理这样的请求，将其视为错误请求
+    - HTTP: `Read a frame size of 1195725856, which is bigger than the maximum allowable buffer size for ALL connections.`
+
 ### 后续
 1. 增加 -server -Xmx2018m -Xms512m
 
