--- a/tq.java.note/src/main/java/_mainshi/20180521.md
+++ b/tq.java.note/src/main/java/_mainshi/20180521.md
@@ -22,6 +22,46 @@
 2. JVM 收集器 算法, 常用命令与参数
 3. 算法复习
 
+### 这几天计划-2018-09-26
+
+
+### 近期目标
+redis                    	***********
+Mysql                    	**********
+spring						**********
+java基础					    *******
+Mybatis						********
+MQ                       	*******
+多线程                   	******
+linux                    	******
+dubbo						******
+SQL优化                  	******
+分布式						*****
+负载均衡(nginx)          	****
+spring cloub				***
+
+### 任职要求调查
+redis                    	***********
+Mysql                    	**********
+spring						**********
+java基础					    *******
+Mybatis						********
+MQ                       	*******
+多线程                   	******
+linux                    	******
+dubbo						******
+SQL优化                  	******
+分布式						*****
+跟踪诊断, 内存泄漏       	****
+Netty                    	***
+脚本语言                 	***
+负载均衡(nginx)          	****
+spring cloub				***
+lucene/solr					**
+tcp/ip						**
+http						**
+tomcat/jetty				**
+java设计模式				    **
 
 ### 以后职业发展
 1. hadoop, Hive, spark..
