--- a/tq.java.note/src/main/java/_mainshi/20180521.md
+++ b/tq.java.note/src/main/java/_mainshi/20180521.md
@@ -23,9 +23,10 @@
 3. 算法复习
 
 ### 这几天计划-2018-09-26
-1. redis总结
+1. redis总结, raft 一致性hash 虚拟槽
 1. mysql 查询优化 复制
 1. spring整理与源码解读
+1. nginx
 
 
 ### 近期目标
