--- a/tq.java.note/src/main/java/_mainshi/20180521.md
+++ b/tq.java.note/src/main/java/_mainshi/20180521.md
@@ -23,12 +23,13 @@
 3. 算法复习
 
 ### 这几天计划-2018-09-26
-1. redis 总结, raft 一致性hash 虚拟槽
+1. redis 总结, raft 一致性hash 虚拟槽--
 1. mysql 查询优化 复制
-1. spring 整理与源码解读 总结
+1. spring 整理与源码解读 总结--
 1. mybatis 源码分析 知乎
 1. MQ
 1. nginx
+1. linux
 
 
 ### 近期目标
