--- a/tq.java.note/src/main/java/_mainshi/20180521.md
+++ b/tq.java.note/src/main/java/_mainshi/20180521.md
@@ -26,8 +26,9 @@
 1. redis 总结, raft 一致性hash 虚拟槽--
 1. mysql 查询优化 复制
 1. spring 整理与源码解读 总结--
-1. mybatis 源码分析 知乎
+1. mybatis 源码分析 知乎--
 1. MQ
+1. tcp/ip
 1. nginx
 1. linux
 
