--- a/tq.java.note/src/main/java/_mainshi/20180521.md
+++ b/tq.java.note/src/main/java/_mainshi/20180521.md
@@ -2,6 +2,37 @@
 
 ## 近期计划
 
+
+### 2018-12-24
+1. 总纲
+    - 在看书或者看源码的时候 思考 **这些组件是如何解决高并发以及分布式的问题的**
+    - **尽最大努力深入知识的底层**
+2. 知识点
+    - 复习
+        - Netty
+        - Spring
+        - Tomcat
+        - Mysql
+        - 算法与数据结构
+            - 排序
+            - 查询
+            - 索引
+        - HTTP
+        - Redis
+        - MQ
+    - 新学
+        - 学习各个高并发与分布式场景的解决方案, 并**总结**
+        - Mysql
+        - TCP/IP
+        - 大数据量的处理方式与具体的算法实现
+        - Linux
+        - Zookeeper
+        - Kafka
+    - 重点
+        - 组件中高并发的实现
+        - 组件中分布式的实现
+    
+    
 ### 知识点
 1. Redis(复制, 集群), 源码实现粗看, 
 2. Netty(复习并深入)
@@ -32,6 +63,7 @@
 1. tcp/ip
 1. nginx
 1. linux
+
 
 
 ### 近期目标
