--- a/tq.java.note/src/main/java/_mainshi/20180521.md
+++ b/tq.java.note/src/main/java/_mainshi/20180521.md
@@ -28,6 +28,8 @@
         - Linux
         - Zookeeper
         - Kafka
+        - Flink
+        - Spark
     - 重点
         - 组件中高并发的实现
         - 组件中分布式的实现
